--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,15 +1,60 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #fff4e6;
   line-height: 1.5;
 }
 
-h1,
+p {
+  margin: 0;
+}
+
+header {
+  padding: 20px;
+  background-color: white;
+  overflow: hidden;
+  font-size: 20px;
+}
+
+h1{
+  float: left;
+  margin-left: 60px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 60px;
+}
+
+nav{
+  float: right;
+  margin-right: 60px;
+  padding: 20px;
+  display: inline-flex;
+}
+
+li{
+display: inline;
+margin-right: 10px;
+justify-content: space-between;
+}
+
+.hero-banner{
+  background-image: url("");
+  background-position: center;
+  background-size: cover;
+
+}
+
+#about{
+  background-image: url("/Assets/Personal-photo.JPG");
+  background-size: cover;
+  height: 100px;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
 h2,
 h3,
 h4,
@@ -18,6 +63,3 @@ h6 {
   margin: 0;
 }
 
-p {
-  margin: 0;
-}
