--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -77,6 +77,8 @@ li {
 }
 
 .page-section h2 {
+  margin-bottom: 20px;
+  margin-top: 20px;
   font-size: 50px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin-left: 50px;
@@ -91,6 +93,7 @@ li {
 
 #about-paragraph {
   float: right;
+  font-size: 20px;
 }
 
 #work {
@@ -126,7 +129,7 @@ li {
   grid-area: code-refactor;
 }
 
-#whiteboard-img{
+#whiteboard-img {
   height: auto;
   max-width: 100%;
 }
@@ -136,16 +139,15 @@ li {
 }
 
 #vulcano-img {
-  height: ;
-  max-width: 30%;
-
+  width: 200px;
+  height: 300px;
 }
 
 #project3 {
   grid-area: project3;
 }
 
-#sunset-img{
+#sunset-img {
   height: auto;
   max-width: 30%;
 
@@ -155,7 +157,7 @@ li {
   grid-area: project4;
 }
 
-#sky-img{
+#sky-img {
   height: auto;
   max-width: 30%;
 }
@@ -164,15 +166,21 @@ li {
   grid-area: project5;
 }
 
-#ocean-img{
+#ocean-img {
   height: auto;
   max-width: 30%;
 }
 
+#contact p{
+  font
+}
 footer {
   text-align: center;
 }
 
+footer p{
+  font-size: 20px;
+}
 
 @media only screen and (max-width: 1105px) {
   ul {
