--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -194,6 +194,10 @@ footer a {
     font-size: 30px;
   }
 
+  .content figcaption{
+    font-size: 30px;
+  }
+
   .about-paragraph {
     font-size: 15px;
   }
