changed webpage color theme

--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -18,7 +18,6 @@ a {
 
 header {
   font-size: 10px;
-  padding: 10px;
 }
 
 /* Navigation bar */
@@ -26,20 +25,21 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color:#e9e5dc ;
 }
 .navBar h1 {
   width: 25%;
   font-weight: 500;
-  padding: 5px;
+  padding: 10px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 50px;
 }
+
 #navigation {
   display: flex;
   width: 50%;
   align-items: center;
-  float:right;
-}
+  float:right;}
 
 .navBar ul {
   padding: 15px;
@@ -49,20 +49,22 @@ header {
 .navBar li {
   margin: 5px 10px;
   display: inline-flex;
-  cursor: pointer;}
+  cursor: pointer;
+}
 
   li a:hover {
-    background-color: aquamarine;
+    background-color: #be9b7b
+    ;
   }
-  
+
 /* Hero banner and page section styling */
 .page-wrapper {
   padding: 5px;
-  background-color: white;
+  background-color: #e9e5dc;
 }
 
 .hero-banner {
-  background-image: url("../images/la-gomera-image.PNG");
+background-color: ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
