--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -130,13 +130,27 @@ td {
   "project4 project5"
   ;
 }
+.category-grid-cell {
+  width: 90%; 
+  max-width: 500px; 
+  overflow: hidden; 
+}
 
 #code-refactor {
   grid-area: code-refactor;
   background-image: url("../images/code-refactor.PNG");
   border: 3px solid #be9b7b;
-
 }
+
+#refactor-img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+
 #project2 {
   grid-area: project2;
   background-image: url("../images/ocean.PNG");
